objects/TeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Account_Team_Role__c</fullName>
        <label>Account Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Clerk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipName>TeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Team__c</columns>
        <columns>Account_Team_Role__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TeamMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>